--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "@sentry/tracing": "^6.7.2",
     "@sentry/vue": "^6.7.2",
     "axios": "^0.27.2",
-    "core-js": "^3.6.5",
-    "vue-chartjs": "^3.5.1",
-    "vue-numeric": "2.4.3",
-    "vue-numeric-input": "^1.0.6",
     "chart.js": "^2.9.4",
+    "core-js": "^3.6.5",
     "single-spa-vue": "^1.9.0",
     "systemjs-webpack-interop": "^1.2.1",
     "vue": "^2.6.12",
-    "vue-router": "^3.4.3",
+    "vue-chartjs": "^3.5.1",
     "vue-moment": "^4.1.0",
+    "vue-numeric": "^2.4.3",
+    "vue-numeric-input": "^1.0.6",
+    "vue-router": "^3.4.3",
     "vue-toast-notification": "^0.5.4",
     "vuetify": "^2.6.6",
     "vuex": "^3.1.3"
