--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,13 +4,14 @@ include:
       - 'sonarqube-check.yml'
       - 'build-image.yml'
       - 'deploy-image.yml'
-      - 'importmap-shared-deps.yml'
+      - 'purge.yml'
 
 stages:
   - test
   - build
   - deploy
   - reconfig
+  - purge
 
 before_script:
   - >
