--- a/kubernetes/deploy-dev.yaml
+++ b/kubernetes/deploy-dev.yaml
@@ -40,7 +40,7 @@ spec:
       - name: registry
       containers:
       - name: fe-promotion
-        image: git.edenfarm.id:5050/project-version3/erp-dashboard/promotion/eks-dev:<VERSION>
+        image: git.edenfarm.id:5050/project-version3/erp-dashboard/promotion/dev:<VERSION>
         ports:
         - name: http-port
           containerPort: 8080
@@ -144,9 +144,10 @@ kind: Ingress
 metadata:
   namespace: fe-promotion
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
   name: fe-promotion
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - fe-promotion.edenfarm.tech
